--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Bio-EnsEMBL-XS
+Revision history for Bio::EnsEMBL::XS
 
 1.0.0	 Fri Oct 18 14:58:22 BST 2013
 	 First version. Implements in C the rearrange method of
