--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 	
 			    Bio::EnsEMBL::XS
 
-			     Version 1.2.2
+			     Version 1.3.1
 
-			    November 17 2017
+			    January ?? 2018
 
 Copyright [1999-2015] Wellcome Trust Sanger Institute and the EMBL-European Bioinformatics Institute
 Copyright [2016-2017] EMBL-European Bioinformatics Institute     
