Up-to-date documentation.

--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,7 @@
 	
 			    Bio::EnsEMBL::XS
 
-			     Version 1.2.2
-
-			    November 17 2017
+			     Version 1.3.1
 
 Copyright [1999-2015] Wellcome Trust Sanger Institute and the EMBL-European Bioinformatics Institute
 Copyright [2016-2018] EMBL-European Bioinformatics Institute     
@@ -12,9 +10,9 @@ Copyright [2016-2018] EMBL-European Bioinformatics Institute
 OBTAINING THE ENSEMBL API EXTENSIONS
 ------------------------------------
 
-The latest version can be obtained by cloning the Sanger internal git repository:
+The latest version can be obtained by cloning the GitHub repo::
 
-    git clone ssh://git.internal.sanger.ac.uk/repos/git/ensembl/ensembl-xs.git 
+    git clone https://github.com/Ensembl/ensembl-xs.git 
 
 
 PREREQUISITES
@@ -103,7 +101,7 @@ AUTHOR
 ------
 
 The module and the extensions have been written by Alessandro Vullo <avullo@ebi.ac.uk>
-with the invaluable assistance of Andy Yates.
+with the assistance of Andy Yates and contribution of Will McLaren.
 
 
 LICENSE AND COPYRIGHT
