--- a/README
+++ b/README
@@ -3,8 +3,6 @@
 
 			     Version 1.3.1
 
-			    January ?? 2018
-
 Copyright [1999-2015] Wellcome Trust Sanger Institute and the EMBL-European Bioinformatics Institute
 Copyright [2016-2018] EMBL-European Bioinformatics Institute     
 
@@ -40,7 +38,7 @@ AUTHOR
 ------
 
 The module and the extensions have been written by Alessandro Vullo <avullo@ebi.ac.uk>
-with the invaluable assistance of Andy Yates.
+with the assistance of Andy Yates and contribution of Will McLaren.
 
 
 LICENSE AND COPYRIGHT
