--- a/Changes
+++ b/Changes
@@ -1,29 +1,41 @@
 Revision history for Bio::EnsEMBL::XS
 
-1.2.1    Tue Mar 03 00:00:00 GMT 2015
+2.3.2    Mon May 14 2018
+         Avoid testing interval tree stuff with current/previous core api branches
+
+2.3.1    Fri May 11 2018
+         Interval tree interface compliant with core API PP implementation
+
+1.3.1    Thu Apr 26 2018
+         Mutable interval tree implementation
+
+1.2.2    Fri Nov 17 2017
+         Travis/Slack integration
+
+1.2.1    Tue Mar 03 2015
          Bug fix. assert_[integer|numeric] second parameter is
          not assigned the default value if corresponding argument
 	 in function call is explicitly set to undef.
 
-1.2.0    Thu Feb 26 00:00:00 GMT 2015
+1.2.0    Thu Feb 26 2015
 	 Third version. Implements in C the overlap method
 	 of module Bio::Ensembl::Variation::Utils::VariationEffect.
 
-1.1.2    Thu Feb 19 16:14:25 GMT 2015
+1.1.2    Thu Feb 19 2015
          Bug fix. assert_ref third parameter is not assigned
          the default value if corresponding argument in function
          call is explicitly set to undef.
          
-1.1.1    Fri Dec 6 15:56:07 GMT 2013
+1.1.1    Fri Dec 6 2013
 	 Bug fix. check_ref and assert_ref weren't working with
          Bio::EnsEMBL::Utils::Proxy derived objects.
 
-1.1.0    Tue Oct 29 16:31:28 GMT 2013
+1.1.0    Tue Oct 29 2013
          Second version. Implements in C some of the methods
          of the Bio::EnsEMBL::Utils::Scalar module (e.g. check_ref,
 	 assert_ref).
 
-1.0.0	 Fri Oct 18 14:58:22 BST 2013
+1.0.0	 Fri Oct 18 2013
 	 First version. Implements in C the rearrange method of
 	 module Bio::EnsEMBL::Utils::Argument.
 
